--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "connect-history-api-fallback": "^1.3.0",
     "express": "^4.14.1"
   },
   "devDependencies": {
